--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 </head>
+<style>
+	.hola{
+		text-aling: center;
+	}
+</style>
 <body>
-	<h1>HOLAA</h1>
+	<h1 class = "hola">HOLAA</h1>
 
 </body>
 </html>
